# OpenGLTemplate

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  main.yml  personalize_template.yml
src/: main.cpp
